--- a/ipu/templates/account/forgot_password.html
+++ b/ipu/templates/account/forgot_password.html
@@ -1,16 +1,32 @@
 {% extends 'account/nav-landing.html' %}
 {% load staticfiles %}
 {% load material_form %}
-{% block title %} Forgot Password {% endblock %}
+{% load recaptcha %}
+{% block title %}
+	Forgot Password
+{% endblock %}
 {% block main %} 
 	<div id="forgot-password-form-div" class="row">
 		<h4 class="col s12 center teal-text">Forgot Password</h4>
 		<form class="col s8 offset-s2" action="{% url 'forgot_password' %}" method='POST' id="forgot-password-form">
 			{% csrf_token %}
 			{% form form=forgot_password_form %}{% endform %}
+			<div id='forgot-password-recaptcha-div' site-key="{% recaptcha_site_key %}" style="margin-bottom: 2%;"></div>
 			<div class="col s12">
 				<button type="submit" name="forgot_password" class="btn btn-waves-light col s8 offset-s2" style="width: 60%">Proceed</button>
 			</div>
 		</form>
 	</div>
+	<script>
+		var onloadCallback = function() {
+			var site_key = document.getElementById('forgot-password-recaptcha-div').getAttribute('site-key');
+	        grecaptcha.render('forgot-password-recaptcha-div', {
+	          'sitekey' : site_key,
+	        });
+	    };
+	</script>
+	<script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
+        async defer>
+    </script>
+
 {% endblock %}
