cross host handling of recaptcha

--- a/ipu/templates/account/base_home_layout.html
+++ b/ipu/templates/account/base_home_layout.html
@@ -265,7 +265,7 @@
               <button id="close-report-form" class="btn waves-effect waves-light">Cancel<i class="material-icons right">close</i></button>
             </div><div class="col s0 l6"></div>
             <div class="col s6 l3">
-              <button id="submit-report-form" url="{% url 'submit_report' %}" class="btn waves-effect waves-light">Submit<i class="material-icons right">send</i></button>
+              <button id="submit-report-form" url="{% url 'report' %}" class="btn waves-effect waves-light">Submit<i class="material-icons right">send</i></button>
             </div>
       </div>
     </div>
