--- a/ipu/templates/stats/stats.html
+++ b/ipu/templates/stats/stats.html
@@ -27,7 +27,7 @@
 
 
 {% block main %}
-<div class="row">
+<div class="row" style="min-height: 477px;">
 	<div class="col s10 m8 offset-s1 offset-m2" id="stats-form-div">
 		<form method="GET" id="stats-form" action="{% url 'stats' %}">
 			<h4 class="teal-text flow-text center-align"><b>Placement Statistics</b></h4>
