--- a/ipu/static/account/auth.css
+++ b/ipu/static/account/auth.css
@@ -507,9 +507,9 @@ main img
     {
       position: absolute;
       top: 20px;
-      left: 10px;
-      height: 50px;
-      width: 50px;
+      left: 15px;
+      padding: 2px;
+      z-index: 541651651654;
     } 
 
 .help-block {
