--- a/ipu/templates/account/team.html
+++ b/ipu/templates/account/team.html
@@ -23,7 +23,9 @@
     <meta property="og:url" content= "https://placements.ggsipu.ac.in/team/" />
     <!--SEO work end-->
 	<style>.dev-icons{font-size: 18px !important;}</style>
+
 {% endblock %}
+{% block content %}
 
 {% block main %}
 
@@ -98,6 +100,8 @@
 				</div>
             </div>
     </div>
+
+{% endblock %}
 
 {% endblock %}
 
