Change navbar + footer color; Other fixes

--- a/ipu/templates/account/landing.html
+++ b/ipu/templates/account/landing.html
@@ -1,7 +1,7 @@
 {% extends 'account/base.html' %}
 {% load staticfiles %}
 
-{% block title %}Training and placement cell – Guru Gobind Singh Indraprastha University | GGSIPU placements | IPU placements | IP university placements | Indraprastha University delhi Placement | Tnp cell ip university{% endblock %}
+{% block title %}Training and Placement Cell – Guru Gobind Singh Indraprastha University | GGSIPU placements | IPU placements | IP university placements | Indraprastha University delhi Placement | Tnp cell ip university{% endblock %}
 
 {% block head %}
 	<link type="text/css" rel="stylesheet" href="{% static 'common/css/font-awesome/css/font-awesome.min.css' %}" />
@@ -151,7 +151,7 @@
                   <li> | </li>
                   <li><a href="http://www.ipu.ac.in/rti.php" class="grey-text text-lighten-3" target="_blank" href="#!">RTI</a></li>
                   <li> | </li>
-                  <li><a href="{% url 'team' %}" class="grey-text text-lighten-3" href="#!">Meet the team</a></li>
+                  <li><a href="{% url 'team' %}" class="grey-text text-lighten-3" href="#!">Meet the Team</a></li>
                 </ul>
               </div>
             </div>
@@ -159,7 +159,7 @@
           <div class="footer-copyright">
             <div class="container">
 	            <div id="footer-last" style="width: 100%;display: flex;justify-content: center;align-items: center;"> 
-	            © 2016 GURU GOBIND SINGH INDRAPRASTHA UNIVERSITY. All rights reserved.
+	            © 2016 Guru Gobind Singh Indraprastha University. All rights reserved.
 	            </div>	
             </div>
           </div>
