--- a/ipu/templates/account/nav-landing.html
+++ b/ipu/templates/account/nav-landing.html
@@ -20,7 +20,7 @@ nav{
     
     height: 92px;
     padding-top: 10px;
-    background-color: #1a237e !important;
+    background-color: #192D5B !important;
 
 }
 
@@ -32,7 +32,7 @@ nav .brand-logo {
 }
 
 footer.page-footer {
-    background-color: #1a237e;
+    background-color: #192D5B;
 }
 
 footer.page-footer {
@@ -124,7 +124,7 @@ footer.page-footer {
   nav{
     
     height: 80px;
-    background-color: #1a237e !important;
+    background-color: #192D5B !important;
     padding-top: 2px;
 
 
@@ -137,7 +137,7 @@ nav .brand-logo {
 }
 
 footer.page-footer {
-    background-color: #1a237e !important;
+    background-color: #192D5B !important;
 }
 
 footer.page-footer {
@@ -237,7 +237,7 @@ nav{
     
     height: 64px;
     padding-top: 2px;
-    background-color: #1a237e !important;
+    background-color: #192D5B !important;
     padding-left: 20px;
 
 }
@@ -250,7 +250,7 @@ nav .brand-logo {
 
 
 footer.page-footer {
-    background-color: #1a237e;
+    background-color: #192D5B;
 }
 
 footer.page-footer {
@@ -398,12 +398,12 @@ footer.page-footer {
               <div class="col l10 offset-l1 s12">
                 <ul style="display: flex;width: 90%;justify-content: space-between;" id="footer-links">
                   <li><a class="grey-text text-lighten-3" href="#!">Contact Us</a></li>
-                  <li> | </li>
+                  <li style="color: #6ACEEB"> | </li>
                   <li><a class="grey-text text-lighten-3" href="#!">Feedback</a></li>
-                  <li> | </li>
-                  <li><a href="http://www.ipu.ac.in/rti.php" class="grey-text text-lighten-3" target="_blank" href="#!">RTI</a></li>
-                  <li> | </li>
-                  <li><a href="{% url 'team' %}" class="grey-text text-lighten-3" href="#!">Meet the team</a></li>
+                  <li style="color: #6ACEEB"> | </li>
+                  <li><a target="_blank" href="http://www.ipu.ac.in/rti.php" class="grey-text text-lighten-3" target="_blank" href="#!">RTI</a></li>
+                  <li style="color: #6ACEEB"> | </li>
+                  <li><a href="{% url 'team' %}" class="grey-text text-lighten-3" href="#!">Meet the Team</a></li>
                 </ul>
               </div>
             </div>
@@ -411,7 +411,7 @@ footer.page-footer {
           <div class="footer-copyright">
             <div class="container">
               <div id="footer-last" style="width: 100%;display: flex;justify-content: center;align-items: center;"> 
-              © 2016 GURU GOBIND SINGH INDRAPRASTHA UNIVERSITY. All rights reserved.
+              © 2016 Guru Gobind Singh Indraprastha Univeristy. All rights reserved.
               </div>  
             </div>
           </div>
